<resources>
    <string name="app_name">Thief Tracker</string>
    
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Commands</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_unlock_command">Unlock phone</string>
    <string name="pref_default_unlock_command">unlock</string>

    <string name="pref_title_lock_command">Lock phone</string>
    <string name="pref_default_lock_command">lock</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Alarm repetition number</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_security_settings">Security Settings</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="pref_header_about">About</string>
    <string name="pref_sensitivity_title">Sensitivity</string>
    <string name="pref_sensitivity_summary">Current value is $1</string>
    <string name="pref_sensitivity_key">Sensitivity</string>
    <string name="pref_sensitivity_defaulValue">20</string>

    <string name="pref_repetitions_key">Repetitions</string>
    <string name="pref_repetitions_defaulValue">3</string>
    <string name="pref_repetitions_title">Number of repetitions</string>
    <string name="pref_repetitions_summary">Current value is $1</string>

    <!-- Friend activities string-->
    <string name="friend_name">Enter a name</string>
    <string name="friend_phone">Enter a phone number</string>
    <string name="admin_receiver_status_disable_warning">Be careful, Thief-Tracker won\'t work if you disable administrator mode !</string>
    <string name="admin_receiver_status_enabled">Admin receiver enabled !</string>
    <string name="admin_receiver_status">Admin Receiver Status</string>
    <string name="admin_receiver_status_disabled">Admin receiver status disabled !</string>
    <string name="admin_receiver_status_pw_changed">Admin receiver password changed !</string>

    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pref_default_PIN">0000</string>
    <string name="pref_key_PIN">PIN</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="alarm_service_started">TEST_SERVICE</string>
    <string name="alarm_service_label">Thief-Tracker\'s alarm</string>
    <string name="alarm_button_correct_text">C</string>
    <string name="add_new_friend">Add a new friend</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="buttonOk">Register</string>
    <string name="buttonCancel">cancel</string>
    <string name="title_activity_add_new_friend">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_new_friends">Sign in</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="pref_key_message">Message</string>
    <string name="prefs_title_about">About</string>
    <string name="pref_key_about">about</string>
    <string name="pref_key_commands">commands</string>
    <string name="prefs_title_commands">Commands</string>
</resources>
