<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.example.sbastien.thieftracker.SeekBarPreference
        android:key = "@string/pref_sensitivity_key"
        android:title = "@string/pref_sensitivity_title"
        android:defaultValue="@string/pref_sensitivity_defaulValue"
        android:max = "100"
        android:dialogMessage="Choose the movement sensitivity of the alarm"
        android:summary = "@string/pref_sensitivity_summary"
        />

    <EditTextPreference
        android:key = "@string/pref_key_PIN"
        android:title="PIN"
        android:defaultValue="@string/pref_default_PIN"
        android:dialogMessage="Choose your PIN to unlock the phone"
        android:inputType="numberPassword"
        android:maxLength="4"

        />

    <Preference
        android:key = "@string/pref_key_commands"
        android:title="@string/prefs_title_commands" >
    </Preference>

    <Preference
        android:key = "@string/pref_key_about"
        android:title="@string/prefs_title_about" >
    </Preference>



</PreferenceScreen>
