<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
         android:key="Lock"
         android:title="@string/pref_title_lock_command"
         android:defaultValue="@string/pref_default_lock_command"
         android:selectAllOnFocus="true"
         android:inputType="textCapWords"
         android:capitalize="words"
         android:singleLine="true"
         android:maxLines="1" />

     <EditTextPreference
         android:key="Unlock"
         android:title="@string/pref_title_unlock_command"
         android:defaultValue="@string/pref_default_unlock_command"
         android:selectAllOnFocus="true"
         android:inputType="textCapWords"
         android:capitalize="words"
         android:singleLine="true"
         android:maxLines="1" />

</PreferenceScreen>
