<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.sbastien.thieftracker.SettingsActivity$CommandsPreferenceFragment"
        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_black_24dp" />

    <header
        android:fragment="com.example.sbastien.thieftracker.SettingsActivity$SecurityParametersPreferenceFragment"
        android:title="@string/pref_header_security_settings"
        android:icon="@drawable/ic_notifications_black_24dp" />


    <header
        android:fragment="com.example.sbastien.thieftracker.AboutFragment"
        android:title="@string/pref_header_about" android:icon="@android:drawable/ic_menu_help" />



</preference-headers>
