<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sbastien.thieftracker.FriendManager.NewFriendActivity">



    <TextView android:id="@+id/viewName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_friend"
        android:gravity="center"
        android:layout_margin="15dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/friendName"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="5dp"/>
        <android.support.v7.widget.AppCompatEditText android:id="@+id/nameField"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/friendPhone"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <android.support.v7.widget.AppCompatEditText android:id="@+id/phoneField"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/buttonCancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:onClick="onCancelClick"
            style="?android:attr/borderlessButtonStyle" />

        <Button android:id="@+id/buttonConfirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonOk"
            android:onClick="onRegisterClick"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


</LinearLayout>
